fix too long question name breaking question menu
made question name bit fixed width. Tested on chrome, firefox 4 and ie8.
should fix point 2 of #29

the carousel code, which powers the scrolly question menu, insists on every item being the same size, so if one question has a long name, all the other items get stretched out as well. Will need to look at this again in the future.

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -135,6 +135,16 @@ html{
 .questionSelector #marks #feedback {
 	padding: 0;
 }
+
+.questionSelector #name {
+	float:left;
+	width: 11em;
+}
+
+.questionSelector #marks {
+	float:right;
+}
+
 #marks #feedback img {
 	visibility:hidden;
 }
